<resources>
    <string name="app_name">Google-Solution-Challenge</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="enter_an_email_address">Enter an email address</string>
    <string name="create_new_account">Create New Account</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string-array name="universities">
        <item>Georgetown University</item>
        <item>American University</item>
        <item>George Washington University</item>
    </string-array>
    <string name="title_activity_resource">ResourceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_question">QuestionActivity</string>
</resources>