<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/create_new_account"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/enter_an_email_address"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="383dp"
        android:ems="10"
        android:hint="@string/fui_password_hint"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="325dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginBottom="201dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewPrompt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fui_transparent"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/tapLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/fui_transparent"
            android:text="@string/log_in" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>